--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ br {
 }
 
 .nav-item {
-  flex-basis: calc(33% - 8px);
+  flex-basis: calc(25% - 8px);
 }
 
 .list-group-collapse {
@@ -91,6 +91,10 @@ br {
 @media (max-width: 768px) {
   .intervalText {
     font-size: 14px;
+  }
+  .nav-item {
+    flex-basis: calc(50% - 8px);
+    margin-bottom: 6px;
   }
 }
 
